--- a/MMM-ObjectBlocks.css
+++ b/MMM-ObjectBlocks.css
@@ -1,10 +1,24 @@
-/*
- *
- * {{MODULE_NAME}}
- *
- * {{AUTHOR_NAME}}
- * {{LICENSE}} Licensed.
- *
- * Custom here your css module
- *
- */
+.MMM-SchoolAnnouncement .table {
+    border-spacing: 0px 0px;
+    border-collapse: separate;
+    text-align: left;
+}
+
+.MMM-SchoolAnnouncement .spacerRow {
+    padding-bottom: 5px;
+}
+
+.MMM-SchoolAnnouncement .message {
+    font-weight: normal;
+    color: white;
+}
+	
+.MMM-SchoolAnnouncement .line {
+    border-spacing: 10px 0px;
+    border-collapse: separate;
+    text-align: left;
+    color:white;
+    font-weight: normal;
+    width: 50px;
+}
+	
